Adding sub path to use default GH Pages domain

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div>
       <a class="footer__logo" href="/">
-        <img src="/assets/images/OSS-Sustainability-Lab-small.svg" />
+        <img src="{{ site.baseurl }}/assets/images/OSS-Sustainability-Lab-small.svg" />
       </a>
       <small>© OSS Sustainability Lab <span id="year"></span></small>
     </div>
