--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="site-header__inner wrapper-wide">
-    <a href="/" class="site-logo">
-      <img src="/assets/images/OSS-Sustainability-Lab.svg" />
+    <a href="{{ site.baseurl }}/" class="site-logo">
+      <img src="{{ site.baseurl }}/assets/images/OSS-Sustainability-Lab.svg" />
     </a>
   </div>
 </header>
@@ -28,14 +28,14 @@
   <div class="navigation-drawer__inner">
     <div class="nav-buckets">
       <div class="navigation-logo">
-        <a href="/">
-          <img src="/assets/images/OSS-Sustainability-Lab.svg" />
+        <a href="{{ site.baseurl }}/">
+          <img src="{{ site.baseurl }}/assets/images/OSS-Sustainability-Lab.svg" />
         </a>
       </div>
 
       <ul class="main-nav">
         <li {% if page.id == 'home' %}class="is-active"{% endif %}>
-          <a href="/">
+          <a href="{{ site.baseurl }}/">
             <span>About</span>
             <svg width="40" height="41" viewBox="0 0 40 41" fill="none">
               <path d="M6.66667 18.8333V22.1666H26.6667V25.5H30V22.1666H33.3333V18.8333H30V15.5H26.6667V18.8333H6.66667ZM23.3333 12.1666H26.6667V15.5H23.3333V12.1666ZM23.3333 12.1666H20V8.83331H23.3333V12.1666ZM23.3333 28.8333H26.6667V25.5H23.3333V28.8333ZM23.3333 28.8333H20V32.1666H23.3333V28.8333Z" fill="currentColor"/>
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li {% if page.id == 'programs' %}class="is-active"{% endif %}>
-          <a href="/programs/">
+          <a href="{{ site.baseurl }}/programs/">
             <span>Programs</span>
             <svg width="40" height="41" viewBox="0 0 40 41" fill="none">
               <path d="M6.66667 18.8333V22.1666H26.6667V25.5H30V22.1666H33.3333V18.8333H30V15.5H26.6667V18.8333H6.66667ZM23.3333 12.1666H26.6667V15.5H23.3333V12.1666ZM23.3333 12.1666H20V8.83331H23.3333V12.1666ZM23.3333 28.8333H26.6667V25.5H23.3333V28.8333ZM23.3333 28.8333H20V32.1666H23.3333V28.8333Z" fill="currentColor"/>
@@ -51,7 +51,7 @@
           </a>
         </li>
         <li {% if page.id == 'team' %}class="is-active"{% endif %}>
-          <a href="/team/">
+          <a href="{{ site.baseurl }}/team/">
             <span>Team</span>
             <svg width="40" height="41" viewBox="0 0 40 41" fill="none">
               <path d="M6.66667 18.8333V22.1666H26.6667V25.5H30V22.1666H33.3333V18.8333H30V15.5H26.6667V18.8333H6.66667ZM23.3333 12.1666H26.6667V15.5H23.3333V12.1666ZM23.3333 12.1666H20V8.83331H23.3333V12.1666ZM23.3333 28.8333H26.6667V25.5H23.3333V28.8333ZM23.3333 28.8333H20V32.1666H23.3333V28.8333Z" fill="currentColor"/>
@@ -60,7 +60,7 @@
         </li>
 
         <li {% if page.id == 'contact' %}class="is-active"{% endif %}>
-        <a href="/contact/">
+        <a href="{{ site.baseurl }}/contact/">
           <span>Contact</span>
           <svg width="40" height="41" viewBox="0 0 40 41" fill="none">
             <path d="M6.66667 18.8333V22.1666H26.6667V25.5H30V22.1666H33.3333V18.8333H30V15.5H26.6667V18.8333H6.66667ZM23.3333 12.1666H26.6667V15.5H23.3333V12.1666ZM23.3333 12.1666H20V8.83331H23.3333V12.1666ZM23.3333 28.8333H26.6667V25.5H23.3333V28.8333ZM23.3333 28.8333H20V32.1666H23.3333V28.8333Z" fill="currentColor"/>
