--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
       </div>
 
       <div>
-        <a href="mailto:oss.sustainability.lab@gmail.com">
+        <a href="mailto:oss.sustainability.lab@gmail.com" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 16" fill="none">
             <path d="M20 0H0V16H20V0ZM2 14V2H18V14H2ZM6 4H4V6H6V8H8V10H12V8H14V6H16V4H14V6H12V8H8V6H6V4Z" fill="#0F0F0F"/>
           </svg>
