--- a/_dev/scss/compile.scss
+++ b/_dev/scss/compile.scss
@@ -41,6 +41,9 @@
 
 @import "modules/_oneOffs";
 @import "modules/_utils";
+@import "modules/_accordions";
+@import "modules/_curriculum";
+
 
 @import "modules/_modal";
 
