--- a/_dev/scss/base/_type.scss
+++ b/_dev/scss/base/_type.scss
@@ -11,7 +11,7 @@
   font-family: $mono;
   font-size: 48px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
   line-height: 110%;
   letter-spacing: -0.8px;
   margin-bottom: 18px;
@@ -29,10 +29,15 @@
     margin-bottom: 0;
   }
 }
+
 .h1,
 h1,
 .h0 {
   @include heading1;
+}
+
+.h1--thick {
+  font-weight: 400 !important;
 }
 
 .h0 {
@@ -72,6 +77,7 @@ h1,
     margin-bottom: 0;
   }
 }
+
 .h2,
 h2 {
   @include heading2;
@@ -96,6 +102,7 @@ h2 {
     margin-bottom: 0;
   }
 }
+
 .h3,
 h3 {
   @include heading3;
@@ -120,6 +127,7 @@ h3 {
     margin-bottom: 0;
   }
 }
+
 .h4,
 h4 {
   @include heading4;
@@ -143,6 +151,7 @@ h4 {
     margin-bottom: 0;
   }
 }
+
 .h5,
 h5,
 .h6,
@@ -152,10 +161,10 @@ h6 {
 
 @mixin subheading {
   font-family: $mono;
-  font-size: 18px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  letter-spacing: -0.36px;
+  letter-spacing: 4px;
   line-height: 1;
   text-transform: uppercase;
 }
@@ -185,7 +194,7 @@ p,
     margin-bottom: 0;
   }
 
-  + p {
+  +p {
     margin-top: 18px;
   }
 }
@@ -209,7 +218,8 @@ p.p-xlg,
   }
 }
 
-b, strong {
+b,
+strong {
   font-weight: 600;
 }
 
@@ -217,6 +227,22 @@ small,
 .p-sm {
   display: block;
   font-size: 12px;
+}
+
+.rte--light {
+
+  p,
+  ul,
+  ol,
+  li {
+    color: $gray-text;
+  }
+
+
+  a,
+  p a {
+    color: $black;
+  }
 }
 
 
@@ -228,7 +254,8 @@ small,
 
 .rte {
 
-  h1, h2 {
+  h1,
+  h2 {
     margin-bottom: 24px;
 
     &:last-child {
@@ -236,15 +263,17 @@ small,
     }
   }
 
-  h4, h3 {
+  h4,
+  h3 {
     margin-bottom: 8px;
   }
 
-  > *:first-child {
+  >*:first-child {
     margin-top: 0;
   }
 
-  ol, ul {
+  ol,
+  ul {
     display: flex;
     flex-direction: column;
     grid-gap: 10px;
@@ -265,15 +294,15 @@ small,
       list-style-position: inside;
     }
 
-    + h1,
-    + h2,
-    + h3,
-    + h4 {
+    +h1,
+    +h2,
+    +h3,
+    +h4 {
       margin-top: 24px;
     }
   }
 
-  p + p {
+  p+p {
     margin-top: 13px;
   }
 }
@@ -287,6 +316,7 @@ small,
       font-size: 56px;
     }
   }
+
   h2,
   .h2 {
     font-size: 24px;
@@ -295,6 +325,7 @@ small,
       font-size: 28px;
     }
   }
+
   h3,
   .h3 {
     font-size: 20px;
@@ -303,6 +334,7 @@ small,
       font-size: 24px;
     }
   }
+
   h4,
   .h4 {
     font-weight: 600;
@@ -315,7 +347,9 @@ small,
 }
 
 .rte.rte--list-flush {
-  ol, ul {
+
+  ol,
+  ul {
     padding-left: 8px;
     list-style-position: inside;
   }
@@ -326,7 +360,10 @@ small,
   @include start-at($medium) {
     font-size: 18px;
 
-    p, ul, ol, blockquote {
+    p,
+    ul,
+    ol,
+    blockquote {
       font-size: 18px !important;
     }
   }
@@ -350,7 +387,7 @@ small,
   text-decoration: none;
 
   &:after {
-    content: "_____________________________";
+    content: "____________________________________________________________________________________________________________________";
     color: transparent;
     position: absolute;
     right: 0;
@@ -362,7 +399,7 @@ small,
     text-decoration-thickness: 3px;
     text-underline-offset: 6px;
     z-index: -1;
-    transform: translateX(0,0,0);
+    transform: translateX(0, 0, 0);
   }
 
   &:hover {
@@ -378,8 +415,15 @@ small,
 }
 
 @keyframes wave-move {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(50%); } /* Moves the waves left */
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(50%);
+  }
+
+  /* Moves the waves left */
 }
 
 .underline-green:after {
@@ -403,9 +447,11 @@ small,
 .font-weight-400 {
   font-weight: 400;
 }
+
 .font-weight-500 {
   font-weight: 500;
 }
+
 .font-weight-600 {
   font-weight: 600;
 }
@@ -444,4 +490,3 @@ small,
 //    background-position: 100% 50%;
 //  }
 //}
-
