--- a/_dev/scss/layout/_grid.scss
+++ b/_dev/scss/layout/_grid.scss
@@ -2,33 +2,103 @@
 //  Grid
 // ---------------------------------------------------------------------
 
-.col-1 { width: calc(1 / 12 * 100%); }
-.col-2 { width: calc(2 / 12 * 100%); }
-.col-3 { width: calc(3 / 12 * 100%); }
-.col-4 { width: calc(4 / 12 * 100%); }
-.col-5 { width: calc(5 / 12 * 100%); }
-.col-6 { width: calc(6 / 12 * 100%); }
-.col-7 { width: calc(7 / 12 * 100%); }
-.col-8 { width: calc(8 / 12 * 100%); }
-.col-9 { width: calc(9 / 12 * 100%); }
-.col-10 { width: calc(10 / 12 * 100%); }
-.col-11 { width: calc(11 / 12 * 100%); }
-.col-12 { width: 100%; }
+.col-1 {
+  width: calc(1 / 12 * 100%);
+}
+
+.col-2 {
+  width: calc(2 / 12 * 100%);
+}
+
+.col-3 {
+  width: calc(3 / 12 * 100%);
+}
+
+.col-4 {
+  width: calc(4 / 12 * 100%);
+}
+
+.col-5 {
+  width: calc(5 / 12 * 100%);
+}
+
+.col-6 {
+  width: calc(6 / 12 * 100%);
+}
+
+.col-7 {
+  width: calc(7 / 12 * 100%);
+}
+
+.col-8 {
+  width: calc(8 / 12 * 100%);
+}
+
+.col-9 {
+  width: calc(9 / 12 * 100%);
+}
+
+.col-10 {
+  width: calc(10 / 12 * 100%);
+}
+
+.col-11 {
+  width: calc(11 / 12 * 100%);
+}
+
+.col-12 {
+  width: 100%;
+}
 
 @each $breakpoint in map-keys($breakpoints) {
   @include breakpoint($breakpoint) {
-    .col-#{$breakpoint}-1 { width: calc( 1 / 12 * 100%); }
-    .col-#{$breakpoint}-2 { width: calc( 2 / 12 * 100%); }
-    .col-#{$breakpoint}-3 { width: calc( 3 / 12 * 100%); }
-    .col-#{$breakpoint}-4 { width: calc( 4 / 12 * 100%); }
-    .col-#{$breakpoint}-5 { width: calc( 5 / 12 * 100%); }
-    .col-#{$breakpoint}-6 { width: calc( 6 / 12 * 100%); }
-    .col-#{$breakpoint}-7 { width: calc( 7 / 12 * 100%); }
-    .col-#{$breakpoint}-8 { width: calc( 8 / 12 * 100%); }
-    .col-#{$breakpoint}-9 { width: calc( 9 / 12 * 100%); }
-    .col-#{$breakpoint}-10 { width: calc( 10 / 12 * 100%); }
-    .col-#{$breakpoint}-11 { width: calc( 11 / 12 * 100%); }
-    .col-#{$breakpoint}-12 { width: 100%; }
+    .col-#{$breakpoint}-1 {
+      width: calc(1 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-2 {
+      width: calc(2 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-3 {
+      width: calc(3 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-4 {
+      width: calc(4 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-5 {
+      width: calc(5 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-6 {
+      width: calc(6 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-7 {
+      width: calc(7 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-8 {
+      width: calc(8 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-9 {
+      width: calc(9 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-10 {
+      width: calc(10 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-11 {
+      width: calc(11 / 12 * 100%);
+    }
+
+    .col-#{$breakpoint}-12 {
+      width: 100%;
+    }
   }
 }
 
@@ -36,7 +106,7 @@
   margin-right: -$gutter-width;
   margin-left: -$gutter-width;
 
-  > [class*='col-'] {
+  >[class*='col-'] {
     padding-right: $gutter-width !important;
     padding-left: $gutter-width !important;
   }
@@ -59,9 +129,11 @@
 .flex-items-end {
   align-items: end;
 }
+
 .flex-items-center {
   align-items: center;
 }
+
 .flex-justify-between {
   justify-content: space-between;
 }
@@ -70,7 +142,7 @@
 .grid--stretch-all {
   align-items: stretch;
 
-  > * {
+  >* {
     display: flex;
     flex-direction: column;
   }
@@ -92,7 +164,7 @@
     align-items: center;
   }
 
-  > * {
+  >* {
     width: 100%;
   }
 
@@ -104,6 +176,7 @@
     }
   }
 }
+
 @include stop-at($medium) {
   .column--pull-sm {
     margin-top: -130px;
@@ -117,11 +190,19 @@
   }
 }
 
+.columns--two-thirds-reverse {
+
+  @include start-at($medium) {
+    grid-template-columns: 64% 33%;
+  }
+}
+
 .columns--two {
   @include start-at($medium) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
+
 .columns--two-lg {
   @include start-at($large) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -133,10 +214,12 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
+
 .columns--four {
   @include start-at($medium) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
   @include start-at($large) {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -156,12 +239,33 @@
   @include start-at($medium) {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+
   @include start-at($large) {
     grid-gap: 16px;
 
   }
+
   @include start-at($xlarge) {
     grid-gap: 16px;
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+}
+
+.column--has-bg {
+  position: relative;
+
+  svg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate3d(24px, 0, 0);
+    z-index: -1;
+
+    @include stop-at($medium) {
+      opacity: 0.7;
+    }
+
+    // object-fit: contain;
+    // object-position: bottom right;
   }
 }
