--- a/_dev/scss/modules/_oneOffs.scss
+++ b/_dev/scss/modules/_oneOffs.scss
@@ -6,6 +6,10 @@
   margin-left: auto;
 }
 
+.ml-auto {
+  margin-right: auto;
+}
+
 .target-icon {
   width: 67px;
   transform-origin: center;
@@ -19,7 +23,104 @@
   }
 }
 
+.sidebar-callout {
+  >div {
+    background-color: $black;
+    color: $white;
+    border-radius: 24px 24px 24px 0;
+    padding: 48px 36px 48px 24px;
+  }
+
+  >span {
+    display: block;
+    position: relative;
+    background-color: $black;
+    width: 70%;
+    aspect-ratio: 2/.55;
+    border-radius: 0 0 24px 24px;
+    margin-top: -1px;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: -1px;
+      left: calc(100% - 1px);
+      width: 24px;
+      height: 24px;
+      background-color: inherit;
+      clip-path: polygon(100% 0, 0 0, 0 100%);
+
+      @include start-at($medium) {
+        top: 0;
+      }
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 1px;
+      left: 100%;
+      width: 24px;
+      height: 24px;
+      background-color: white;
+      border-radius: 0 0 24px 0;
+      transform: rotate(180deg);
+
+    }
+  }
+}
+
+@include start-at($xlarge) {
+  .sidebar-callout--alt {
+    position: relative;
+    overflow: hidden;
+
+    >div {
+      max-width: calc(100% - 86px);
+      border-radius: 24px 24px 0 0;
+      padding: 48px 0 68px 24px;
+    }
+
+    >span {
+      display: block;
+      position: relative;
+      background-color: $black;
+      width: 100%;
+      height: 80px;
+      margin-top: -2px;
+      border-radius: 0 24px 24px 24px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: unset;
+        left: unset;
+        bottom: 100%;
+        right: 87px;
+        width: 24px;
+        height: 24px;
+        background-color: inherit;
+        transform: translate3d(100%, 1px, 0);
+        clip-path: polygon(100% 100%, 0 0, 0 100%);
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        top: unset;
+        left: unset;
+        bottom: 100%;
+        right: 86px;
+        width: 24px;
+        height: 24px;
+        background-color: white;
+        border-radius: 0 0 24px 0;
+        transform: translate3d(100%, 0, 0) rotate(90deg);
+      }
+    }
+  }
+}
+
 // ----------------------------------------
 //
 // ----------------------------------------
-
