adding resource table link to notion

--- a/_dev/scss/modules/_curriculum.scss
+++ b/_dev/scss/modules/_curriculum.scss
@@ -36,6 +36,11 @@
     margin-bottom: 6px;
   }
 
+  p {
+    margin: 6px 0;
+    color: $gray-text;
+  }
+
   cite {
     color: $gray-text;
     font-family: $mono;
