--- a/_dev/scss/layout/_footer.scss
+++ b/_dev/scss/layout/_footer.scss
@@ -9,8 +9,9 @@
   align-items: center;
   justify-content: space-between;
   font-size: 14px;
-  border-top: 1px solid $border;
   font-family: $mono;
+  background-color: $black;
+  color: $white;
 
   .wrapper {
     display: flex;
@@ -24,7 +25,7 @@
     justify-content: flex-start;
     grid-gap: 8px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .footer__logo {
@@ -37,12 +38,16 @@
   }
 
   @include start-at($medium) {
-    padding: 80px 0 24px;
+    padding: 120px 0;
+
+    .footer__links {
+      min-width: 300px;
+    }
 
     .wrapper {
       display: flex;
       flex-direction: row;
-      align-items: flex-end;
+      align-items: center;
       justify-content: space-between;
     }
   }
