--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,33 @@
 <footer class="site-footer">
   <div class="wrapper">
     <div>
-      <a class="footer__logo" ="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/assets/images/OSS-Sustainability-Lab-small.svg" />
+      <a class="footer__logo"="{{ site.baseurl }}/">
+        <img src="{{ site.baseurl }}/assets/images/OSS-Sustainability-Lab-small-white.svg" />
       </a>
-      <small>© OSS Sustainability Lab <span id="year"></span></small>
+      <small>© OSS Sustainability Lab. All rights reserved.</small>
     </div>
 
-    <div>
+    <div class="footer__links">
       <div>
-        <a class="mb-3" href="https://join.slack.com/t/oss-sustainabilitylab/shared_invite/zt-2xwvvjamb-mQlZcc5Q9XcCr5gzIb_ orQ" target="_blank">
+        <a class="mb-3"
+          href="https://join.slack.com/t/oss-sustainabilitylab/shared_invite/zt-2xwvvjamb-mQlZcc5Q9XcCr5gzIb_ orQ"
+          target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <g clip-path="url(#clip0_37_231)">
-              <path d="M4.3901 15.118C4.3901 16.0833 3.61093 16.8625 2.64561 16.8625C1.6803 16.8625 0.901123 16.0833 0.901123 15.118C0.901123 14.1527 1.6803 13.3735 2.64561 13.3735H4.3901V15.118ZM7.13734 15.118C7.13734 14.1527 7.91652 13.3735 8.88183 13.3735C9.84715 13.3735 10.6263 14.1527 10.6263 15.118V21.3542C10.6263 22.3196 9.84715 23.0987 8.88183 23.0987C7.91652 23.0987 7.13734 22.3196 7.13734 21.3542V15.118Z" stroke="#0F0F0F" stroke-width="1.5"/>
-              <path d="M8.88193 4.35226C7.91662 4.35226 7.13744 3.57308 7.13744 2.60777C7.13744 1.64246 7.91662 0.863281 8.88193 0.863281C9.84725 0.863281 10.6264 1.64246 10.6264 2.60777V4.35226H8.88193ZM8.88193 7.1184C9.84725 7.1184 10.6264 7.89757 10.6264 8.86289C10.6264 9.8282 9.84725 10.6074 8.88193 10.6074H2.62681C1.6615 10.6074 0.882324 9.8282 0.882324 8.86289C0.882324 7.89757 1.6615 7.1184 2.62681 7.1184H8.88193Z" stroke="#0F0F0F" stroke-width="1.5"/>
-              <path d="M19.6288 8.86289C19.6288 7.89757 20.408 7.1184 21.3733 7.1184C22.3386 7.1184 23.1178 7.89757 23.1178 8.86289C23.1178 9.8282 22.3386 10.6074 21.3733 10.6074H19.6288V8.86289ZM16.8816 8.86289C16.8816 9.8282 16.1024 10.6074 15.1371 10.6074C14.1718 10.6074 13.3926 9.8282 13.3926 8.86289V2.60777C13.3926 1.64246 14.1718 0.863281 15.1371 0.863281C16.1024 0.863281 16.8816 1.64246 16.8816 2.60777V8.86289Z" stroke="#0F0F0F" stroke-width="1.5"/>
-              <path d="M15.1371 19.6098C16.1024 19.6098 16.8816 20.3889 16.8816 21.3542C16.8816 22.3196 16.1024 23.0987 15.1371 23.0987C14.1718 23.0987 13.3926 22.3196 13.3926 21.3542V19.6098H15.1371ZM15.1371 16.8625C14.1718 16.8625 13.3926 16.0833 13.3926 15.118C13.3926 14.1527 14.1718 13.3735 15.1371 13.3735H21.3922C22.3575 13.3735 23.1367 14.1527 23.1367 15.118C23.1367 16.0833 22.3575 16.8625 21.3922 16.8625H15.1371Z" stroke="#0F0F0F" stroke-width="1.5"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_37_231">
-                <rect width="24" height="24" fill="white"/>
-              </clipPath>
-            </defs>
+            <path
+              d="M6.52739 14.5136C6.52739 15.5966 5.64264 16.4814 4.55959 16.4814C3.47654 16.4814 2.5918 15.5966 2.5918 14.5136C2.5918 13.4305 3.47654 12.5458 4.55959 12.5458H6.52739V14.5136ZM7.51892 14.5136C7.51892 13.4305 8.40366 12.5458 9.48671 12.5458C10.5698 12.5458 11.4545 13.4305 11.4545 14.5136V19.4407C11.4545 20.5238 10.5698 21.4085 9.48671 21.4085C8.40366 21.4085 7.51892 20.5238 7.51892 19.4407V14.5136ZM9.48671 6.52715C8.40366 6.52715 7.51892 5.6424 7.51892 4.55935C7.51892 3.4763 8.40366 2.59155 9.48671 2.59155C10.5698 2.59155 11.4545 3.4763 11.4545 4.55935V6.52715H9.48671ZM9.48671 7.51867C10.5698 7.51867 11.4545 8.40342 11.4545 9.48647C11.4545 10.5695 10.5698 11.4543 9.48671 11.4543H4.55959C3.47654 11.4543 2.5918 10.5695 2.5918 9.48647C2.5918 8.40342 3.47654 7.51867 4.55959 7.51867H9.48671ZM17.4732 9.48647C17.4732 8.40342 18.3579 7.51867 19.4409 7.51867C20.524 7.51867 21.4087 8.40342 21.4087 9.48647C21.4087 10.5695 20.524 11.4543 19.4409 11.4543H17.4732V9.48647ZM16.4816 9.48647C16.4816 10.5695 15.5969 11.4543 14.5138 11.4543C13.4308 11.4543 12.546 10.5695 12.546 9.48647V4.55935C12.546 3.4763 13.4308 2.59155 14.5138 2.59155C15.5969 2.59155 16.4816 3.4763 16.4816 4.55935V9.48647ZM14.5138 17.4729C15.5969 17.4729 16.4816 18.3577 16.4816 19.4407C16.4816 20.5238 15.5969 21.4085 14.5138 21.4085C13.4308 21.4085 12.546 20.5238 12.546 19.4407V17.4729H14.5138ZM14.5138 16.4814C13.4308 16.4814 12.546 15.5966 12.546 14.5136C12.546 13.4305 13.4308 12.5458 14.5138 12.5458H19.4409C20.524 12.5458 21.4087 13.4305 21.4087 14.5136C21.4087 15.5966 20.524 16.4814 19.4409 16.4814H14.5138Z"
+              fill="white" />
           </svg>
           <span>Join Us on Slack</span>
         </a>
       </div>
 
       <div>
-        <a ="mailto:oss.sustainability.lab@gmail.com" target="_blank">
+        <a href="mailto:oss.sustainability.lab@gmail.com" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 16" fill="none">
-            <path d="M20 0H0V16H20V0ZM2 14V2H18V14H2ZM6 4H4V6H6V8H8V10H12V8H14V6H16V4H14V6H12V8H8V6H6V4Z" fill="#0F0F0F"/>
+            <path d="M20 0H0V16H20V0ZM2 14V2H18V14H2ZM6 4H4V6H6V8H8V10H12V8H14V6H16V4H14V6H12V8H8V6H6V4Z"
+              fill="#ffffff" />
           </svg>
-          <span>oss.sustainability.lab@gmail.com</span>
+          <span>Email Us</span>
         </a>
       </div>
     </div>
@@ -40,9 +35,8 @@
 </footer>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  document.addEventListener('DOMContentLoaded', function () {
     var currentYear = new Date().getFullYear();
     document.getElementById('year').textContent = currentYear;
   });
 </script>
-
